[package]
name = "raspberry_pi_pico"
version = "1.0.0"
edition = "2021"
authors = ["Riccardo Libanora - 226678"]

[dependencies]
embedded-hal = { version = "*", features = ["unproven"] }
rp2040-hal = { git = "https://github.com/rp-rs/rp-hal.git", rev = "e175d2a"}
rp2040-boot2 = "0.3.0"
defmt = "0.3.5"
defmt-rtt = "0.4"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
embedded-graphics = "0.8.1"
ssd1306 = "0.8.4"
usb-device = "0.3.1"
usbd-serial = "0.2.0"

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
